--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   http:
   shared_preferences: "0.5.12"
-
+  flutter_datetime_picker: "^1.4.0"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -49,11 +49,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/img/
+    - assets/logos/
 
 
   fonts:
     - family: OpenSans
       fonts:
-        - asset: assets/fonts/
+        - asset: assets/fonts/OpenSans.ttf
 
 
